# app-solar

./: .clang-format  .gitignore  CHANGELOG.md  Makefile  README.md  ledger_app.toml
.github/workflows/: build_and_functional_tests.yml  ci-workflow.yml  codeql_checks.yml  coding_style_checks.yml  documentation_generation.yml  guidelines_enforcer.yml  lint-workflow.yml  misspellings_checks.yml  python_checks.yml  ragger_snapshots.yml  static_analysis.yml  unit_tests.yml
doc/: COMMANDS.md  TRANSACTION.md
doc/transactions/: TG01_T05_IPFS.md  TG01_T06_TRANFER.md  TG02_T00_BURN.md  TG02_T02_VOTE.md
scripts/: build.sh  build_bear.sh  install_bear.sh  install_cppcheck.sh  install_iwyu.sh  resize_icon.sh
src/: address.c  address.h  app_main.c  app_types.h  constants.h  context.c  context.h  globals.h  sw.h  types.h
src/apdu/: apdu_constants.h  dispatcher.c  dispatcher.h
src/crypto/: crypto.c  crypto.h
src/handler/: get_address.c  get_address.h  get_app_name.c  get_app_name.h  get_public_key.c  get_public_key.h  get_version.c  get_version.h  sign_tx.c  sign_tx.h
src/helper/: send_response.c  send_response.h
src/transaction/: deserialise.c  deserialise.h  deserialise_message.c  deserialise_message.h  deserialise_transaction.c  deserialise_transaction.h  transaction_errors.h  transaction_utils.c  types.h  utils.c  utils.h
src/transaction/types/: burn.c  burn.h  htlc_claim.c  htlc_claim.h  htlc_lock.c  htlc_lock.h  htlc_refund.c  htlc_refund.h  ipfs.c  ipfs.h  multi_signature_registration.c  multi_signature_registration.h  transfer.c  transfer.h  types.h  vote.c  vote.h
src/ui/: display.c  display.h  menu.c  ui_constants.h  ui_text.h  ui_utils.c  ui_utils.h
src/ui/action/: choice.c  choice.h  quit.c  quit.h  ux_approve.h  validate.c  validate.h
src/ui/menu/: display_menu.c  display_menu.h  display_menu_nano.c
src/ui/operations/address/: display_address.c  display_address.h  display_address_nano.c
src/ui/operations/message/: display_message.c  display_message.h  display_message_nano.c
src/ui/operations/public_key/: display_pubkey.c  display_pubkey.h  display_pubkey_nano.c
src/ui/operations/transaction/: display_error.c  display_error.h  display_transaction.c  display_transaction.h  display_transaction_nano.c  modals.c  modals.h  review.c  review.h  review_constants.c  review_constants.h  review_context.c  review_context.h
src/ui/operations/transaction/helpers/: fee.c  fee.h  intent.h  memo.c  memo.h  strategy.c  strategy.h
src/ui/operations/transaction/types/: ui_burn.c  ui_burn.h  ui_ipfs.c  ui_ipfs.h  ui_transfer.c  ui_transfer.h  ui_vote.c  ui_vote.h
src/ui/transactions/: burn_display.c  htlc_claim_display.c  htlc_lock_display.c  htlc_refund_display.c  ipfs_display.c  multi_signature_registration_display.c  transfer_display.c  vote_display.c
src/utils/: check_ascii.c  check_ascii.h
tests/functional/: README.md  conftest.py  constants.py  requirements.txt  run.sh  setup.cfg  test_address_cmd.py  test_apdu_errors_cmd.py  test_app_menu.py  test_app_name_cmd.py  test_app_name_version.py  test_app_version_cmd.py  test_appname_cmd.py  test_error_cmd.py  test_get_address_cmd.py  test_get_pubkey_cmd.py  test_message_sign_cmd.py  test_name_version.py  test_pubkey_cmd.py  test_sign_cmd.py  test_sign_message_cmd.py  test_sign_transaction_cmd.py  test_status_word.py  test_transaction_errors.py  test_transaction_navigation.py  test_version_cmd.py  utils.py
tests/functional/application_client/: boilerplate_command_sender.py  solar_command_sender.py  solar_response_unpacker.py  solar_transaction.py  solar_utils.py
tests/functional/client/: client_interface.py  cmd.py  cmd_builder.py  utils.py
tests/functional/transactions/: burn.py  htlc_claim.py  htlc_lock.py  htlc_refund.py  ipfs.py  multi_signature_registration.py  transfer.py  vote.py
tests/fuzzing/: CMakeLists.txt  README.md  cov.sh
tests/fuzzing/cmake/: Dispatcher.cmake
tests/fuzzing/include/: apdu_offsets.h  glyphs.h  io.h
tests/fuzzing/seeds/: fuzzing.dict
tests/fuzzing/src/: CMakeLists.txt  buffer_mock.c  crypto_mock.c  deserialise_transaction_mock.c  dispatcher_target.c  display_address_mock.c  display_message_mock.c  display_public_key_mock.c  display_transaction_mock.c  glyphs.c  io_mock.c  pic_mock.c  send_response_mock.c
tests/unit-tests/: CMakeLists.txt  README.md  cov.sh  test_format.c  test_tx_parser.c  test_tx_utils.c
tests/unit-tests/cmake/: MessageDeserialiser.cmake  TransactionDeserialiser.cmake  UiUtils.cmake  Utils.cmake
tests/unit-tests/src/: CMakeLists.txt  test_message_parser.c  test_tx_parser.c  test_ui_utils.c  test_utils.c
tools/cppcheck/: SUPPRESSIONS.md  cppcheck.sh  ledger-platform.xml  ledger-sdk.xml  misra-suppressions.txt  misra.json
tools/iwyu/: iwyu.sh
